*SVN*

* Make Upload Progress work with edge Rails [3526] and higher, retain compatibility to earlier builds