@@ -1,3 +1,5 @@
 *SVN*
 
+* Make Upload Progress work with edge Rails [4388] and higher, retain compatibility to earlier builds
+
 * Make Upload Progress work with edge Rails [3526] and higher, retain compatibility to earlier builds
